--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,80 @@
+absl-py==0.7.1
+altgraph==0.10.2
+astor==0.8.0
+backports.weakref==1.0.post1
+bdist-mpkg==0.5.0
+bleach==1.5.0
+bonjour-py==0.3
+Click==7.0
 cmake==3.13.3
 dlib==19.17.0
+enum34==1.1.6
 face-recognition==1.2.3
 face-recognition-models==0.3.0
 Flask==1.0.3
+funcsigs==1.0.2
+futures==3.2.0
+gast==0.2.2
+google-images-download==2.8.0
+grpcio==1.21.1
+gunicorn==19.9.0
+html5lib==0.9999999
 itsdangerous==1.1.0
 Jinja2==2.10.1
+macholib==1.5.1
+Markdown==3.1.1
 MarkupSafe==1.1.1
+matplotlib==1.3.1
+mock==3.0.5
+modulegraph==0.10.4
 numpy==1.16.4
 Pillow==6.0.0
+protobuf==3.8.0
+py2app==0.7.3
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyOpenSSL==0.13.1
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+scipy==0.13.0b1
+selenium==4.0.0a1
+six==1.12.0
+tensorboard==1.7.0
+tensorflow==1.7.1
+termcolor==1.1.0
 Werkzeug==0.15.4
-gunicorn
+xattr==0.6.4
